--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@firebase/app": "^0.7.3",
+    "@firebase/auth": "^0.18.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
     "bootstrap": "^5.0.1",
     "cookies": "^0.8.0",
+    "firebase": "8.10.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.1.1",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^5.0.2",
+    "react-google-login": "^5.2.2",
     "react-overlays": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.4.3",
